# modelbench

./: .enject  .envrc  .gitignore  AGENTS.md  README.md  amap.py  chat.py  embedders.py  fim_completion.py  function_calling.py  get_models.py  json_output.py  main.py  menu.py  models.py  partial_mode.py  prefix_completion.py  provider.py  providers.py  pyproject.toml  reasoner.py  reasoning.py  run.py  runner.py  runners.py  structure_output.py  structured_output.py  tool_calling.py  vanilla.py
util/: rich.py
