[project]
name = "modelbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[socks]>=0.28.1",
    "openai>=1.65.5",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "rtoml>=0.12.0",
    "simple-term-menu>=1.6.6",
]

[tool.ruff.lint]
ignore = ["E402", "E701", "E731", "F403", "F405"]

[tool.ty.src]
exclude = [".venv", "mal", "ref"]
